--- a/.gitignore
+++ b/.gitignore
@@ -121,3 +121,4 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+06-readings/Jared Diamond- Guns, Germs, and Steel- The Fates of Human Societies, 20th Edition (2017).epub
